# code-reviewer

./: .gitattributes  .pylintrc  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt  run_inside_docker.sh
.github/workflows/: test.yml
code-reviewer/: config.yaml  config.yml
src/: comment_search.py  config.py  file_diff.py  json_checker.py  local_run_state.py  matcher_checker.py  pr_review_state.py  review_local.py  run.py  run_state.py  voting.py
src/config/: __init__.py  config.py  config_module.py  loader.py
src/logger/: __init__.py  logger.py  logging_module.py
src/suggestions/: __init__.py  suggested_changes.py  suggester.py  suggester_module.py
tests/: test_comment_search.py  test_json_checker.py  test_run.py  test_suggestions.py  test_voting.py
tests/configs/: both_reset_votes_options.yml  no_rules_reset_votes_after_changes.yml  rule_based_on_vote_no_reset.yml  rule_based_on_vote_then_reset.yml  vote_approve.yml  vote_based_on_description.yml  vote_based_on_diff_pattern.yml  vote_based_on_diff_pattern_new.yml
